fixing spacing and adding people on people index

--- a/app/assets/stylesheets/people.css.scss
+++ b/app/assets/stylesheets/people.css.scss
@@ -12,7 +12,7 @@
 .people {
   display: inline-block;
   width: 33%;
-  float: left;
+  // float: left;
   margin-bottom: 5%;
 }
 
